# MultiplayerChess

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  ChessApplication.cpp  ChessApplication.h  ChessDrawer.cpp  ChessDrawer.h  ChessNetworking.cpp  ChessNetworking.h  PieceTypes.cpp  PieceTypes.h  README.md  ServerIP.txt  Vector2i.h  WavSound.cpp  WavSound.h  Window.cpp  Window.h  chess.sln  chess.vcxproj  chessErrorLog.txt  generateProject.bat  imgui.h  imgui_demo.cpp  main.cpp  vcpkg.json
SDL/include/: SDL.h  SDL_audio.h  SDL_endian.h  SDL_events.h  SDL_gamecontroller.h  SDL_haptic.h  SDL_hidapi.h  SDL_joystick.h  SDL_keyboard.h  SDL_main.h  SDL_messagebox.h  SDL_mouse.h  SDL_mutex.h  SDL_pixels.h  SDL_render.h  SDL_rwops.h  SDL_shape.h  SDL_stdinc.h  SDL_surface.h  SDL_timer.h  SDL_touch.h  SDL_video.h
resources/fonts/: License
src/cpp/: Board.cpp  CastleRights.cpp  ChessApplication.cpp  ChessConnection.cpp  ChessDrawer.cpp  ChessRenderer.cpp  ConnectionManager.cpp  PieceTypes.cpp  PopupManager.cpp  ServerConnection.cpp  SettingsFileManager.cpp  SoundManager.cpp  TextureManager.cpp  WavSound.cpp  Window.cpp  main.cpp
src/hpp/: Board.hpp  ChessApplication.h  ChessDrawer.h  ChessEvents.hpp  ChessMove.hpp  ChessRenderer.hpp  ConnectionManager.hpp  PieceTypes.h  PieceTypes.hpp  PopupManager.hpp  ServerConnection.hpp  SettingsFileManager.hpp  SoundManager.hpp  TextureManager.hpp  Vector2i.h  Vector2i.hpp  WavSound.h  Window.h  castleRights.h  castleRights.hpp  chessNetworkProtocol.h  errorLogger.h  moveType.h
